# Conversational-BI

./: .dockerignore  .env.example  .gitignore  :memory:  Dockerfile  README.md  pyproject.toml  railway.toml  render.yaml
.claude/: launch.json
conversational_bi/: agent_os.py  agents.py  config.py  data_layer.py  followups.py  glossary.py  prompts.py  team.py  tools.py
conversational_bi/agents/: __init__.py  insight.py  query.py  viz.py
conversational_bi/api/: __init__.py  routes.py
conversational_bi/data/: Demo_Policy_Level_Dummy.xlsx  ~$Demo_Policy_Level_Dummy.xlsx
conversational_bi/db/: __init__.py
conversational_bi/models/: __init__.py  followups.py
conversational_bi/prompts/: __init__.py  insight_agent.py  orchestrator.py  query_agent.py  viz_agent.py
conversational_bi/teams/: __init__.py  bi_team.py
conversational_bi/tools/: __init__.py  anomalies.py  bridge.py  charts.py  dashboard.py  filters.py  formatting.py  glossary_tool.py  provenance.py  sql.py
ui/: eslint.config.mjs  exampls.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
ui/src/: store.ts
ui/src/api/: os.ts  routes.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/chat/ChatArea/: ChatArea.tsx  MessageArea.tsx  ScrollToBottom.tsx
ui/src/components/chat/Sidebar/: AuthToken.tsx  EntitySelector.tsx  ModeSelector.tsx  Sidebar.tsx
ui/src/components/ui/: dialog.tsx  select.tsx  skeleton.tsx
ui/src/hooks/: useAIStreamHandler.tsx  useIsMobile.ts  useSessionLoader.tsx
ui/src/lib/: attachments.ts
ui/src/types/: os.ts
(+21 files in other folders)
